Algorithm Update (#201)
Fix Detail craft sticky bun should not result in single-note choice
https://www.pivotaltracker.com/story/show/184559044

Fix Note Choice should not choose incorrect notes
https://www.pivotaltracker.com/story/show/184343503

- Remove "preferred notes" cruft which has been replaced with sticky buns
- Remove ProgramSequencePattern.type cruft